<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeItem"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/shoeItemCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:contentPadding="8dp">

        <!--
            Use ConstraintLayout to make the layout flat, reduce CPU time
        -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelName"
                android:layout_width="@dimen/shoe_item_label_width"
                android:layout_height="wrap_content"
                android:text="@string/label_shoe_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="@string/label_shoe_name_empty"
                android:text="@{shoeItem.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelCompany"
                android:layout_width="@dimen/shoe_item_label_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_shoe_company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelName" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="@string/label_shoe_company_empty"
                android:text="@{shoeItem.company}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/labelCompany"
                app:layout_constraintTop_toTopOf="@+id/labelCompany" />

            <TextView
                android:id="@+id/labelSize"
                android:layout_width="@dimen/shoe_item_label_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_shoe_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelCompany" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="@string/label_shoe_size_empty"
                android:text="@{Double.toString(shoeItem.size)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelSize"
                app:layout_constraintTop_toTopOf="@+id/labelSize" />


            <TextView
                android:id="@+id/labelDescription"
                android:layout_width="@dimen/shoe_item_label_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_shoe_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelSize" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="@string/label_shoe_description_empty"
                android:text="@{shoeItem.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelDescription"
                app:layout_constraintTop_toTopOf="@+id/labelDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>